# app/routers/employeepayroll.js
@@ -4,19 +4,19 @@ const { checkToken } = require('../middleware/helper.js');
 module.exports = (app) => {
 
     // Create a new employeeDetails
-    app.post('/addemployeedata', employeeDetails.create);
+    app.post('/add/employee', employeeDetails.create);
 
     // Retrieve all employeeDetails
-    app.get('/getallemployeedata', checkToken, employeeDetails.findAllUsersData);
+    app.get('/getallemployee', checkToken, employeeDetails.findAllUsersData);
 
     // Retrieve a single employeeDetails with employeeId
     app.get('/findemployeedata/:employeepayrollId', checkToken, employeeDetails.findOneUserData);
 
     // Update a employeeDetails with employeeId
-    app.put('/updateemployeedata/:employeepayrollId', checkToken, employeeDetails.updateUserData);
+    app.put('/update/employeedata/:employeepayrollId', checkToken, employeeDetails.updateUserData);
 
     // Delete a employeeDetails with employeeId
-    app.delete('/deleteemployeedata/:employeepayrollId', checkToken, employeeDetails.deleteUserData);
+    app.delete('/delete/employeedata/:employeepayrollId', checkToken, employeeDetails.deleteUserData);
 
     //Userlogin with a emailId and password
     app.post('/userlogin', employeeDetails.login);
