# swagger/swagger.json
@@ -15,7 +15,7 @@
     "consumes": [],
     "produces": [],
     "paths": {
-        "/addemployeedata": {
+        "/add/employee": {
             "post": {
                 "tags": [],
                 "description": "",
@@ -23,7 +23,6 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "Pet object that needs to be added to the store",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/User"
@@ -99,7 +98,7 @@
                 ]
             }
         },
-        "/updateemployeedata/{employeepayrollId}": {
+        "/update/employeedata/{employeepayrollId}": {
             "put": {
                 "tags": [],
                 "description": "",
@@ -113,7 +112,6 @@
                     {
                         "in": "body",
                         "name": "newData",
-                        "description": "Pet object that needs to be added to the store",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/User"
@@ -138,7 +136,7 @@
                 ]
             }
         },
-        "/deleteemployeedata/{employeepayrollId}": {
+        "/delete/employeedata/{employeepayrollId}": {
             "delete": {
                 "tags": [],
                 "description": "",
@@ -176,7 +174,6 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "Pet object that needs to be added to the store",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/Login"
